<resources>
    <string name="app_name">CurrencyConverter</string>
    <string name="currency_converter_application">Currency Converter Application</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="convert">Convert</string>
    <string name="amount">Amount</string>
    <string name="result">Result</string>
    <string name="_230_aed">230 AED</string>
    <string name="us">USD-United States Dollar</string>
    <string name="aed">AED-United Arab Emirates Dhiram</string>
    <string name="enter_ammount">ُُEnter Ammount</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="search">Search</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>