<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.viewmodel.CurrencyFragment">
    <TextView
        android:id="@+id/app_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/currency_converter_application"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="476dp"
        app:cardCornerRadius="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_title">


    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="4dp"
        app:layout_constraintEnd_toEndOf="@+id/app_title"
        app:layout_constraintStart_toStartOf="@+id/app_title"
        tools:layout_editor_absoluteY="144dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:orientation="horizontal"
            android:padding="4dp"

            android:weightSum="9">

            <EditText
                android:id="@+id/amount"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:hint="@string/enter_ammount"
                android:inputType="numberDecimal"
                android:singleLine="true"
                android:text=""
                android:textSize="20sp" />

            <View
                android:layout_width="2dp"
                android:layout_height="30sp"
                android:layout_gravity="center_vertical"
                android:background="@color/black" />

            <TextView
                android:id="@+id/selectionDropdown"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="4dp"
                android:drawableEnd="@drawable/spinner_arrow"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:maxLines="1"
                android:text="@string/us"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/spinner_background"
            android:orientation="horizontal"
            android:padding="4dp"

            android:weightSum="9">

            <EditText
                android:id="@+id/targetAmount"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:hint="@string/enter_amount"
                android:inputType="numberDecimal"
                android:singleLine="true"
                android:text=""
                android:textSize="20sp" />

            <View
                android:layout_width="2dp"
                android:layout_height="30sp"
                android:layout_gravity="center_vertical"
                android:background="@color/black" />

            <TextView
                android:id="@+id/targetCurrency"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="4dp"
                android:drawableEnd="@drawable/spinner_arrow"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:maxLines="1"
                android:text="@string/aed"
                android:textSize="20sp" />

        </LinearLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>