<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/app_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/currency_converter_application"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.jaredrummler.materialspinner.MaterialSpinner
        android:id="@+id/spinner_from"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginStart="30dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="527dp"
        android:text="@string/from"
        android:textColor="@android:color/darker_gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_title"
        app:layout_constraintVertical_bias="1.0" />

    <com.jaredrummler.materialspinner.MaterialSpinner
        android:id="@+id/spinner_to"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="100dp"
        android:text="@string/to"
        android:textColor="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="@+id/spinner_from"
        app:layout_constraintStart_toStartOf="@+id/spinner_from"
        app:layout_constraintTop_toBottomOf="@+id/spinner_from" />

    <TextView
        android:id="@+id/from_text_View"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="1"
        android:layout_marginLeft="30dp"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_from" />
    <TextView
        android:id="@+id/to_text_View"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="3.6"
        android:layout_marginLeft="30dp"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_to" />

</androidx.constraintlayout.widget.ConstraintLayout>